intentando que furule o yo que se